# genosearch

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  bootstrap  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  common_type.h  creatidx.cc  creatidx.h  fa2hdmz.cc  fa2hdmz.h  fa2hdsq.cc  fa2hdsq.h  isearch.cc  isearch.h  mfile.cc  mfile.h  mfile_e.h  sfxa.h  sfxa_builder.cc  sfxa_builder.h  sfxa_concrete.cc  sfxa_concrete.h  sfxa_lcpcalc.h  sfxa_opener.cc  sfxa_opener.h  sfxa_searcher.cc  sfxa_searcher.h  sfxa_sorter.h
tests/: Makefile.am  Makefile.in  creatidx.at  creatidx.in  fa2hdsq.at  fa2hdsq.in  isearch.at  isearch.in  package.m4  testsuite  testsuite.at
